<resources>
    <string name="app_name">O Prestador</string>
    <string name="txt_cadastro">Quero me cadastrar</string>
    <string name="txt_acessar">Acessar</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="hint_login">Login</string>
    <string name="hint_senha">Senha</string>
    <string name="title_cadastro">Criar novo cadastro</string>
    <string name="hint_login_cadastro">Email</string>
    <string name="hint_senha_cadastro">Senha</string>
    <string name="hint_repeticao_senha_cadastro">Repetir Senha</string>
    <string name="txt_title_divisor">Você quer procurar um prestador ou cadastrar seus serviços?</string>
    <string name="txt_divisor_pedir_servico">Procurar um Prestador</string>
    <string name="txt_divisor_cadastrar_servico">Cadastrar Meus Serviços</string>
    <string name="txt_menu_lista_Pedidos">Pedidos</string>
    <string name="txt_menu_meus_pedidos">Meus Pedidos</string>
    <string name="txt_menu_perfil">Perfil</string>
    <string name="pedidos_disponiveis">Pedidos Disponiveis</string>
    <string name="nome_moedas">Libongo</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="img_perfil">Imagem de Perfil</string>
    <string name="endereco">Endereço</string>
    <string name="perfil_rua">Rua</string>
    <string name="num_endereco">N°</string>
    <string name="cep_endereco">CEP</string>
    <string name="perfil_complemento">Complemento</string>
    <string name="perfil_cidade">Cidade</string>
    <string name="perfil_bairro">Bairro</string>
    <string name="perfil_dados_pessoais">Dados Pessoais</string>
    <string name="perfil_nome_completo">Nome Completo</string>
    <string name="ddd_telefone">DDD</string>
    <string name="telefone">Telefone</string>
    <string name="consentimento_termos_de_uso">Concordo com os termos de uso</string>
    <string name="pedidoDetalhado_titulo">Título</string>
    <string name="pedidoDetalhado_txtButton">Liberar Pedido</string>
    <string name="label_fragment_pedido_detalhado">Pedido Detalhado</string>
    <string name="title_novo_pedido">Novo Pedido</string>
    <string name="title_pedido_aberto">Pedidos em Aberto</string>
    <string name="pedidos_abertos">Pedidos Abertos</string>
    <string name="categoria">Categoria</string>
    <string name="sub_categoria">Sub Categoria</string>
    <string name="rua">Rua</string>
    <string name="titulo_pedido_novo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="enviar">Enviar</string>
    <string name="invalid_email">Este Email é invalido!</string>
    <string name="invalid_password">A senha deve ter pelo menos 8 caracteres</string>
    <string name="invalid_repet_password">as senhas são diferentes</string>
    <string name="txt_salvar">Salvar</string>
    <string name="provincia">Provincia</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="usuarioNaoEncontrado">Usuario não encontrado</string>
    <string name="usuarioJaCadastrado">usuario já está cadastrado</string>
    <string name="municio">Município</string>
</resources>