<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/segundaria_2">

<!--    <include android:id="@+id/pedidoNovo_linearLayout_header"-->
<!--        layout="@layout/logo_cabecalho"/>-->

    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AutoCompleteTextView">

            <AutoCompleteTextView
                android:id="@+id/pedido_novo_input_categoria"
                style="@style/Input_AutoCompleteTextView"
                android:hint="@string/categoria"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AutoCompleteTextView">

            <AutoCompleteTextView
                android:id="@+id/input_sub_categoria"
                style="@style/Input_AutoCompleteTextView"
                android:hint="@string/sub_categoria"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            style="@style/editText_pedido_novo"
            android:background="@drawable/background_edit_text_novo_pedido"
            android:hint="@string/local"/>
        <EditText
            style="@style/editText_pedido_novo"
            android:hint="@string/titulo_pedido_novo"/>
        <EditText
            style="@style/editText_pedido_novo"
            android:gravity="start|top"
            android:layout_height="200dp"
            android:hint="@string/descricao"/>
        <EditText
            style="@style/editText_pedido_novo"
            android:background="@drawable/background_edit_text_novo_pedido"
            android:hint="@string/valor"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_arredondada"
            android:backgroundTint="@color/primaria_2"
            android:text="@string/enviar"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>