<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/segundaria_2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/nome_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primaria_2"
        android:textSize="17pt"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="-30dp"/>

    <EditText
        android:id="@+id/input_login"
        style="@style/editText_bordas_redondas"
        android:hint="@string/hint_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_app" />

    <EditText
        android:id="@+id/input_senha"
        style="@style/editText_bordas_redondas"
        android:hint="@string/hint_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_login"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_acessar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_arredondada"
        android:backgroundTint="@color/primaria_2"
        android:text="@string/txt_acessar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_senha"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cadastro"
        android:textColor="@color/primaria_2"
        android:clickable="true"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_acessar"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>