<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/segundaria_2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cadastro_img_logo"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/cadastro_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textAlignment="center"
        android:textColor="@color/primaria_2"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_img_logo"
        android:layout_marginTop="-10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_edit_email_input"
        style="@style/TextInputLayout_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_text_title" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_edit_email"
            style="@style/editText_bordas_redondas"
            android:hint="@string/hint_login_cadastro"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_edit_password_input"
        style="@style/TextInputLayout_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_edit_email_input" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_edit_password"
            style="@style/editText_bordas_redondas"
            android:hint="@string/hint_senha_cadastro"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_edit_rept_password_input"
        style="@style/TextInputLayout_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_edit_password_input" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_edit_rept_password"
            style="@style/editText_bordas_redondas"
            android:hint="@string/hint_repeticao_senha_cadastro"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cadastro_btn_cadastrar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_arredondada"
        android:backgroundTint="@color/button_background"
        android:text="@string/txt_cadastrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_edit_rept_password_input"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>