<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/segundaria_2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/divisor_img_logo"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/title_divisor"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/txt_title_divisor"
        android:textAlignment="center"
        android:textColor="@color/primaria_2"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/divisor_img_logo"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btn_divisor_pedir_servico"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_arredondada"
        app:backgroundTint="@color/white"
        android:text="@string/txt_divisor_pedir_servico"
        android:textColor="@color/primaria_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_divisor"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_divisor_cadastrar_servico"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/borda_arredondada"
        app:backgroundTint="@color/white"
        android:text="@string/txt_divisor_cadastrar_servico"
        android:textColor="@color/primaria_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_divisor_pedir_servico" />

</androidx.constraintlayout.widget.ConstraintLayout>